# RL-Flight-Crazyflie

./: .gitignore  CMakeLists.txt  CrazyCheetSheet.txt  Dockerfile  Dockerfile_build_firmware  IMPLEMENTATION_SUMMARY.md  POLICY_SWITCHING_DEPLOYMENT.md  QUICK_REFERENCE.md  README.md  TRAINING_SUMMARIES.md  build_firmware_with_policy_switching.sh
actors/: TRAINING_INFO_2025_08_18_00_06_27_d+o+a+r+h+c+f+w+e+_000.txt  TRAINING_INFO_2025_10_17_10_24_20_d+o+a+r+h+c+f+w+e+_000.txt  TRAINING_INFO_2025_10_17_10_35_42_d+o+a+r+h+c+f+w+e+_000.txt  actor_000000000000000.h  actor_000000000000000.h5  actor_000000000100000.h  actor_000000000100000.h5  actor_000000000200000.h  actor_000000000200000.h5  actor_000000000300000.h  position_to_position_at_2m_actor_2400000.h
actors/actor_2m_one_pipe_obsticle/: actor_000000002000000.h  actor_000000002000000.h5  training_parameters_summary.txt
actors/hover_actors/: hoverActor_000000000300000.h5
actors/hover_actors/new1/: hover_actor_000000001500000.h  hover_actor_000000001500000.h5  training_parameters_summary.txt
actors/hover_actors/new2/: actor_000000000100000.h  actor_000000000100000.h5  actor_000000000200000.h  actor_000000000200000.h5  actor_000000000300000.h  actor_000000000300000.h5  actor_000000000400000.h  actor_000000000400000.h5  actor_000000000500000.h  actor_000000000500000.h5  actor_000000000600000.h  actor_000000000600000.h5  actor_000000000700000.h  actor_000000000700000.h5  actor_000000000800000.h  actor_000000000800000.h5  actor_000000000900000.h  actor_000000000900000.h5  actor_000000001000000.h  actor_000000001000000.h5  actor_000000001100000.h  actor_000000001100000.h5  (+11 more)
actors/position_to_position_2m_good_agents/: actor_000000002400000.h5  training_parameters_summary.txt
deployment_actors/: hover_actor_fixed.h
docs/: CRITICAL_BUG_FIX_DEC3.md  CrazyCheetSheet.txt  FIRMWARE_BUILD_VERIFICATION.md  MASTER_BRANCH_COMMIT_MESSAGES.txt  POLICY_SWITCHING_DEPLOYMENT.md  PROJECT_MANUAL.md  TRAINING_SUMMARIES.md
docs/firmware_outputs/: README.md
scripts/: configure_policy_switching.py  create_training_files.sh  test_policy_switching.py  trigger.py
src/: CMakeLists.txt  ablation_study.cpp  checkpoint_loader.h  constants.h  off_policy_runner_with_policy_switching.h  policy_switching.h  training.cpp  training.h  training_cuda.cu  training_cuda.h  training_cuda_benchmark.cu  training_cuda_simple.cu  training_position_to_position.h  training_state.h  training_with_checkpoint.h  training_with_checkpoint_example.cpp
src/config/: ablation.h  checkpoint_config.h  config.h  config_cuda.h  config_cuda_backup.h  parameters.h
src/cuda/: parameters.h
src/steps/: checkpoint.h  curriculum.h  policy_switch.h  training_summary.h  trajectory_collection.h  validation.h
src/ui/: ui.cpp
src/ui/static/: drone.js  index.css  index.html  main.js  position_markers.js  simulator.js
(+7 files in other folders)
